modifier sur component code

--- a/NSPlayground2/app/pages/code/code.component.css
+++ b/NSPlayground2/app/pages/code/code.component.css
@@ -15,9 +15,11 @@
 .dialog-wrapper {
     visibility: collapse;
     opacity: 0;
+
 }
 
 .dialog {
+    border-radius: 20px ;
     border-width: 1 0 1 0;
     border-color: black;
     background-color: white;
