--- a/NSPlayground2/app/pages/login/login.component.html
+++ b/NSPlayground2/app/pages/login/login.component.html
@@ -3,7 +3,7 @@
         <GridLayout rows="33*, 67*">
             <GridLayout row="0" class="logo-container">
                 <GridLayout class="image-container">
-                    <Image src="~/images/logo@3x.png"></Image>
+                    <Image src="~/images/logo.png" ></Image>
                 </GridLayout>
             </GridLayout>
             <GridLayout row="1" rows="*, auto" [ngClass]="{'login-page-tablet': isTablet()}">
