--- a/NSPlayground2/app/pages/list_test/list-test.component.html
+++ b/NSPlayground2/app/pages/list_test/list-test.component.html
@@ -21,8 +21,8 @@ Open the file 'app/app.config.ts' and update your Kinvey app's appKey and appSec
         </StackLayout>
     </ActionItem>
 </ActionBar>
-<GridLayout rows="*" backgroundColor="#f3f3f3">
-    <ScrollView row="0" >
+<GridLayout  backgroundColor="#f3f3f3">
+    <ScrollView >
 
         <StackLayout >
             <GridLayout  *ngFor="let test of tests; let i = index"  rows="*,3*"
