--- a/NSPlayground2/app/pages/list_test/item-test/item-test.component.html
+++ b/NSPlayground2/app/pages/list_test/item-test/item-test.component.html
@@ -12,7 +12,7 @@
         [text]="dictionayjsontest[isArFr].textbutton" ></Label>
 </StackLayout>
 </GridLayout>
-<GridLayout backgroundColor="#f5f5f5" row="1" colSpan="2" rows="*,*"  class="gridSeconde2" ios:shadowRadius="3">
+<GridLayout backgroundColor="#333" row="1" colSpan="2" rows="*,*"  class="gridSeconde2" shadow="2">
     <!--row 1
     <StackLayout row="0"  col="0" colSpan="3" (tap)="ontapDetail()">
         <Image #imgD class="labelD" opacity="0.2" height="20" width="20" src="~/images/chevron-arrow-down.png"></Image>
