--- a/NSPlayground2/app/pages/list_test/item-test/item-test.component.html
+++ b/NSPlayground2/app/pages/list_test/item-test/item-test.component.html
@@ -9,10 +9,11 @@
  <Label
         class="labelPasser"
         *ngIf="!(test_item?.termine == '1')" 
-        [text]="dictionayjsontest[isArFr].textbutton" ></Label>
+        [text]="dictionayjsontest[isArFr].passer" 
+        (tap) = "passer(test_item)"></Label>
 </StackLayout>
 </GridLayout>
-<GridLayout backgroundColor="#333" row="1" colSpan="2" rows="*,*"  class="gridSeconde2" shadow="2">
+<GridLayout  row="1" colSpan="2" rows="*,*"  class="gridSeconde2" shadow="2">
     <!--row 1
     <StackLayout row="0"  col="0" colSpan="3" (tap)="ontapDetail()">
         <Image #imgD class="labelD" opacity="0.2" height="20" width="20" src="~/images/chevron-arrow-down.png"></Image>
@@ -26,6 +27,6 @@
 
         <!--row 3-->
         <Label row="2" col="0" class="label"
-            [text]="dictionayjsontest[isArFr].periode+': '+(test_item?.datedebut |  date:'shortDate')+' - '+(test_item?.datefin |  date:'shortDate')"></Label>
+            [text]="dictionayjsontest[isArFr].periode+': '+(test_item?.datedebut |  date:'yyyy-MM-dd')+' - '+(test_item?.datefin |  date:'yyyy-MM-dd')"></Label>
     </GridLayout>
 </GridLayout>
