--- a/NSPlayground2/app/pages/prepare_test/prepare-test.component.css
+++ b/NSPlayground2/app/pages/prepare_test/prepare-test.component.css
@@ -9,10 +9,27 @@
 .labelPasser{
     text-align: center;
     color: white;
-    width: 85;
+    width: 160;
     border-radius:3;
     padding: 5 0;
     background-color: #3DB7D8;
      font-size: 15;
-    vertical-align: center;
+     text-align: center;
+    margin-top: 50;
+}
+.label{
+    font-size: 15;
+    color: #333;
+    text-align: center;
+    padding-left: 5;
+    margin-top: 15;
+    
+
+}
+
+.StackLayoutContainer{
+    margin: 15;
+    height:270;
+    vertical-align: top;
+
 }
