--- a/NSPlayground2/app/pages/questions/question.component.css
+++ b/NSPlayground2/app/pages/questions/question.component.css
@@ -15,17 +15,43 @@
   }
 
   .caro-item-dot {
-    background-color: blueviolet;
-    border-radius: 6;
-    height: 12;
-    width: 12;
+    background-color: blue;
+    border-radius: 7;
+    height: 14;
+    width: 14;
+    margin: 2;
+    font-size:7;
+    text-align: center;
+    line-height: 14;
+    color: beige;
 }
 
 .caro-item-dot-selected {
-    opacity: .3;
+  background-color:dodgerblue;
+  border-radius: 10;
+  height: 20;
+  width: 20;
+  margin: 2;
+  opacity: .2;
+  font-size:10;
+  text-align: center;
+  line-height: 20;
+  color: black;
 }
 
 .imageQuestion{
-  height: 40;
-  width: 40;
+  height: 200;
+  width: 200
+  ;
+}
+.btnMove{
+   height: 150;
+   width: 150;
+   border-radius: 50%;
+   background-color: blue;
+   color: antiquewhite;
+}
+
+.classCocher{
+  background-color: violet;
 }
