--- a/NSPlayground2/app/pages/prepare_test/prepare-test.component.html
+++ b/NSPlayground2/app/pages/prepare_test/prepare-test.component.html
@@ -2,7 +2,7 @@
 The login functionality is backed by Kinvey. For this, you need to configure the Kinvey App.
 Open the file 'app/app.config.ts' and update your Kinvey app's appKey and appSecret.
 -->
-<Page loaded="pageLoaded"  xmlns="http://www.nativescript.org/tns.xsd">
+<Page backgroundColor="#f3f3f3" loaded="pageLoaded"  xmlns="http://www.nativescript.org/tns.xsd">
 <ActionBar title="E-Manar" class="action-bar" android:style="padding-top:20" style="background :#0C2633"
     flat="true">
     <ActionItem ios.position="right" (tap)="isAr_Fr(0)">
